--- a/ScadaData/ScadaData.Std/ScadaData.Std.csproj
+++ b/ScadaData/ScadaData.Std/ScadaData.Std.csproj
@@ -56,9 +56,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Log.Std">
-      <HintPath>..\..\Log\Log.Std\bin\Release\netstandard2.0\Log.Std.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\..\Log\Log.Std\Log.Std.csproj" />
   </ItemGroup>
 
 </Project>
