--- a/ScadaWeb/ScadaWebShell5/Web.config
+++ b/ScadaWeb/ScadaWebShell5/Web.config
@@ -1,9 +1,21 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <system.web>
-      <compilation debug="true" targetFramework="4.0" />
-    </system.web>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
+  <system.web>
+    <compilation debug="true" targetFramework="4.5" />
+    <pages controlRenderingCompatibilityVersion="4.0" />
+  <!-- Uncomment if using IIS 7 Classic Mode, IIS 6, or Mono --><!--
+		<httpHandlers>
+			<add verb="GET" path="*.jsx" type="React.Web.BabelHandlerFactory, React.Web" />
+		</httpHandlers>
+		--></system.web>
   <system.webServer>
     <httpProtocol>
       <customHeaders>
@@ -30,16 +42,17 @@
         </fileExtensions>
       </requestFiltering>
     </security>
-  </system.webServer>
-
+  <handlers>
+			<remove name="Babel" />
+			<add name="Babel" verb="GET" path="*.jsx" type="React.Web.BabelHandlerFactory, React.Web" preCondition="integratedMode" />
+		</handlers></system.webServer>
   <system.serviceModel>
     <bindings>
       <webHttpBinding>
-        <binding name="scadaHttpBind">
-        </binding>
+        <binding name="scadaHttpBind" />
         <binding name="scadaHttpsBind">
           <security mode="Transport">
-            <transport clientCredentialType="None"/>
+            <transport clientCredentialType="None" />
           </security>
         </binding>
       </webHttpBinding>
@@ -60,8 +73,7 @@
     </behaviors>
     <services>
       <service name="Scada.Web.ClientApiSvc">
-        <endpoint address="" behaviorConfiguration="scadaBehavior"
-            binding="webHttpBinding" bindingConfiguration="scadaHttpBind" contract="Scada.Web.ClientApiSvc" />
+        <endpoint address="" behaviorConfiguration="scadaBehavior" binding="webHttpBinding" bindingConfiguration="scadaHttpBind" contract="Scada.Web.ClientApiSvc" />
         <!-- Uncomment the block below to allow HTTPS connection -->
         <!--<endpoint address="" behaviorConfiguration="scadaBehavior"
             binding="webHttpBinding" bindingConfiguration="scadaHttpsBind" contract="Scada.Web.ClientApiSvc" />-->
